--- a/blog-week17/package.json
+++ b/blog-week17/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
+    "db:migrate": "npx sequelize db:migrate",
+    "start": "npm run db:migrate && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
