--- a/blog-week17/package.json
+++ b/blog-week17/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "db:migrate": "npx sequelize db:migrate",
+    "db:migrate": "npx sequelize-cli db:migrate",
     "start": "npm run db:migrate && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
