--- a/blog-week17/package.json
+++ b/blog-week17/package.json
@@ -8,7 +8,8 @@
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.1"
+    "express-session": "^1.17.1",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {},
   "scripts": {
