--- a/blog-week17/package.json
+++ b/blog-week17/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {},
   "scripts": {
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "start": "npm run db:migrate && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
