--- a/blog-week17/package.json
+++ b/blog-week17/package.json
@@ -19,6 +19,9 @@
     "start": "npm run db:migrate && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "12.x"
+  }, 
   "author": "",
   "license": "ISC"
 }
