--- a/blog-week17/package.json
+++ b/blog-week17/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
@@ -21,7 +22,7 @@
   },
   "engines": {
     "node": "12.x"
-  }, 
+  },
   "author": "",
   "license": "ISC"
 }
